--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -76,6 +76,10 @@
             gap: 15px;
         }
 
+        @media (max-width: 767px) {
+            margin: 100px auto;
+        }
+
         @media (max-width: 600px) {
             display: block;
             margin: 30px auto 100px auto;
@@ -251,6 +255,18 @@
         margin: 200px auto 100px;
         position: relative;
 
+        @media (max-width:1200px) {
+            margin: 100px auto;
+        }
+
+        @media (max-width: 991px) {
+            margin: 70px auto;
+        }
+
+        @media (max-width: 767px) {
+            margin: 100px auto;
+        }
+
         .why-looking__bgsvg{
             position: absolute;
             right: 0;
@@ -266,11 +282,23 @@
 
             h3{
                 max-width: 60%;
+
+                @media (max-width:767px) {
+                    max-width: 100%;
+                }
             }
 
             p{
                 max-width: 80%;
                 margin: 0 0 0 auto;
+
+                @media (max-width:767px) {
+                    max-width: 100%;
+                }
+            }
+
+            @media (max-width:767px) {
+                margin-bottom: 30px;
             }
         }
     }
@@ -281,6 +309,10 @@
 
         @media (max-width: 991px) {
             margin: 70px auto;
+        }
+
+        @media (max-width: 767px) {
+            margin: 100px auto;
         }
 
         h3{
@@ -386,6 +418,10 @@
             margin: 70px auto;
         }
 
+        @media (max-width: 767px) {
+            margin: 100px auto;
+        }
+
         .container{
             min-height: inherit;
             display: flex;
@@ -483,6 +519,7 @@
                     font-weight: 600;
                     font-size: 30px;
                     line-height: 40px;
+                    opacity: .8;
 
                     @media (max-width: 991px) {
                         font-weight: 500;
@@ -568,6 +605,15 @@
         .d-flex{
             gap: 60px;
 
+            @media (max-width:1200px) {
+                gap: 30px;
+            }
+
+            @media (max-width:767px) {
+                flex-direction: column;
+                gap: 25px;
+            }
+
             h3, p{
                 width: 100%;
             }
@@ -575,11 +621,33 @@
             p{
                 margin-top: 30px;
                 margin-bottom: 0;
+
+                @media (max-width:767px) {
+                    font-size: 16px;
+                    line-height: 30px;
+                    margin-top: 40px;
+                }
+            }
+
+            .col-6{
+                width: calc(50% - 30px);
+
+                @media (max-width:1200px) {
+                    width: calc(50% - 15px);
+                }
+
+                @media (max-width:767px) {
+                    width: 100%;
+                }
             }
 
             .services-content-wrapper-boxes{
                 .d-flex{
                     gap: 20px;
+
+                    @media (max-width:1100px) {
+                        gap: 10px;
+                    }
                 }
 
                 .item{
@@ -587,15 +655,71 @@
                     flex-direction: column;
                     gap: 20px;
 
+                    @media (max-width:1100px) {
+                        gap: 10px;
+                    }
+
+                    &.item-1{
+                        @media (max-width:767px) {
+                            display: grid;
+                            grid-template-columns: repeat(2, 1fr);
+                            gap: 15px; 
+                        }
+                    }
+
+                    img{
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius: 15px;
+
+                        @media (max-width:767px) {
+                            height: 300px;
+                            object-position: 0 -45px;
+                            border-radius: 10px;
+                        }
+
+                        @media (max-width:575px) {
+                            height: 190px;
+                            object-position: top;
+                        }
+                    }
+
                     .box{
                             width: 300px;
                             min-height: 143px;
                             padding: 25px;
                             border-radius: 15px;
 
+                            @media (max-width:1200px) {
+                                width: 280px;
+                                padding: 20px;
+                            }
+
+                            @media (max-width:1100px) {
+                                width: 250px;
+                                padding: 15px;
+                                min-height: auto;
+                            }
+
+                            @media (max-width:991px) {
+                                width: 190px;
+                                padding: 15px;
+                            }
+
+                            @media (max-width:767px) {
+                                width: 100%;
+                                min-height: 135px;
+                                border-radius: 10px;
+                            }
+
                             h5{
                                 margin-top: 18px;
                                 margin-bottom: 0;
+                                word-break: break-all;
+
+                                @media (max-width:767px) {
+                                    margin-top: 15px;
+                                }
                             }
 
                             h3, h5{
@@ -605,6 +729,10 @@
 
                             h3{
                                 margin-bottom: 0;
+
+                                @media (max-width:767px) {
+                                    font-size: 40px;
+                                }
                             }
 
                             &.box-light{
@@ -638,6 +766,10 @@
 
         @media (max-width: 991px) {
             margin: 70px auto;
+        }
+
+        @media (max-width: 767px) {
+            margin: 100px auto;
         }
 
         &__bgsvg{
@@ -755,6 +887,7 @@
 
         @media (max-width: 767px) {
             padding-bottom: 70px;
+            margin: 100px auto;
         }
 
         &-row{
@@ -839,6 +972,28 @@
         @media (max-width: 991px) {
             margin: 70px auto;
             max-width: 100%;
+        }
+
+        @media (max-width: 767px) {
+            margin: 100px auto;
+        }
+
+        &.version-2{
+            @media (max-width: 1300px) {
+                max-width: 100%;
+            }
+
+            @media (max-width: 1200px) {
+                width: 966px;
+            }
+
+            @media (max-width: 767px) {
+                .d-flex{
+                    .col-2{
+                        width: 100%;
+                    }
+                }
+            }
         }
 
         .d-flex{
@@ -1071,11 +1226,53 @@
                     align-items: flex-start;
                     padding: 25px 20px;
 
+                    @media (max-width: 1300px) {
+                        width: 442px;
+                    }
+
+                    @media (max-width: 1200px) {
+                        width: 380px;
+                    }
+
+                    @media (max-width: 390px) {
+                        width: 290px;
+                    }
+
                     &:nth-child(2){
                         margin-left: calc(240px * 1);
 
                         &:before{
                             left: calc(240px * 1);
+                        }
+
+                        @media (max-width: 1300px) {
+                            margin-left: calc(220px * 1);
+
+                            &:before{
+                                left: calc(220px * 1);
+                            }
+                        }
+
+                        @media (max-width: 1200px) {
+                            margin-left: calc(190px * 1);
+
+                            &:before{
+                                left: calc(190px * 1);
+                            }
+                        }
+
+                        @media (max-width: 991px) {
+                            margin-left: 0;
+
+                            &:before{
+                                left: 190px;
+                            }
+                        }
+
+                        @media (max-width: 390px) {
+                            &:before{
+                                left: 145px;
+                            }
                         }
                     }
 
@@ -1084,6 +1281,36 @@
 
                         &:before{
                             left: calc(240px * 2);
+                        }
+
+                        @media (max-width: 1300px) {
+                            margin-left: calc(220px * 2);
+
+                            &:before{
+                                left: calc(220px * 2);
+                            }
+                        }
+
+                        @media (max-width: 1200px) {
+                            margin-left: calc(190px * 2);
+
+                            &:before{
+                                left: calc(190px * 2);
+                            }
+                        }
+
+                        @media (max-width: 991px) {
+                            margin-left: 0;
+
+                            &:before{
+                                left: 380;
+                            }
+                        }
+
+                        @media (max-width: 390px) {
+                            &:before{
+                                left: 290px;
+                            }
                         }
 
                         &:after{
@@ -1096,6 +1323,18 @@
                             height: 100%;
                             background: repeating-linear-gradient(to bottom, #2B2B2B 0, #2B2B2B 5px, transparent 5px, transparent 15px);
                             z-index: -1;
+
+                            @media (max-width: 1300px) {
+                                right: 288px;
+                            }
+
+                            @media (max-width: 1200px) {
+                                right: 176px;
+                            }
+
+                            @media (max-width: 991px) {
+                                display: none;
+                            }
                         }
                     }
 
@@ -1105,16 +1344,66 @@
                         &:before{
                             left: calc(240px * 3);
                         }
+
+                        @media (max-width: 1300px) {
+                            margin-left: calc(220px * 3);
+
+                            &:before{
+                                left: calc(220px * 3);
+                            }
+                        }
+
+                        @media (max-width: 1200px) {
+                            margin-left: calc(190px * 3);
+
+                            &:before{
+                                left: calc(190px * 3);
+                            }
+                        }
+
+                        @media (max-width: 991px) {
+                            margin-left: 0;
+
+                            &:before{
+                                left: 0;
+                            }
+                        }
+
+                        &::after{
+                            @media (max-width: 1300px) {
+                                right: 68px;
+                            }
+
+                            @media (max-width: 1200px) {
+                                right: -14px;
+                            }
+
+                            @media (max-width: 991px) {
+                                display: none;
+                            }
+                        }
                     }
                     
 
                     h4{
                         font-weight: 500;
                         margin-bottom: 40px;
+
+                        @media (max-width: 1300px) {
+                            margin-bottom: 20px;
+                        }
+
+                        @media (max-width: 767px) {
+                            margin-bottom: 25px;
+                        }
                     }
 
                     ul{
                         margin-top: 0;
+
+                        @media (max-width: 767px) {
+                            padding-left: 25px;
+                        }
                         
 
                         li{
@@ -1122,6 +1411,22 @@
                             line-height: 32px;
                             font-weight: 300;
                             font-family: $font;
+
+                            @media (max-width: 1300px) {
+                                font-size: 18px;
+                                line-height: 27px;
+                            }
+
+                            @media (max-width: 767px) {
+                                font-size: 15px;
+                                line-height: 25px;
+                            }
+                        }
+                    }
+
+                    &:not(:first-child){
+                        @media (max-width: 991px) {
+                            margin-top: 50px;
                         }
                     }
                 }
