--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -648,6 +648,10 @@
                     @media (max-width:1100px) {
                         gap: 10px;
                     }
+
+                    @media (max-width:767px) {
+                        gap: 15px;
+                    }
                 }
 
                 .item{
