--- a/src/scss/components/_aboutus-wrapper.scss
+++ b/src/scss/components/_aboutus-wrapper.scss
@@ -10,6 +10,18 @@
         }
     }
 
+    &.version-2{
+        .aboutus-wrapper__bgline{
+            position: absolute;
+            left: -55px;
+            top: 0;
+            width: 54%;
+            z-index: 1;
+            margin-top: -268px;
+            max-height: 200%;
+        }
+    }
+
     &__bgline{
         position: absolute;
         left: 0;
