--- a/src/scss/components/_blog-listing.scss
+++ b/src/scss/components/_blog-listing.scss
@@ -1,5 +1,9 @@
 .blogs-listing-wrapper{
-    margin: 100px auto 20px auto;
+    margin: 150px auto 20px auto;
+
+    @media (max-width:1400px) {
+        margin: 100px auto 20px auto;
+    }
 
     @media (max-width:991px) {
         margin: 70px auto 20px auto;
