--- a/src/scss/components/_service-detail-wrapper.scss
+++ b/src/scss/components/_service-detail-wrapper.scss
@@ -255,16 +255,12 @@
         margin: 200px auto 100px;
         position: relative;
 
-        @media (max-width:1200px) {
+        @media (max-width:1400px) {
             margin: 100px auto;
         }
 
         @media (max-width: 991px) {
             margin: 70px auto;
-        }
-
-        @media (max-width: 767px) {
-            margin: 100px auto;
         }
 
         .why-looking__bgsvg{
@@ -448,9 +444,13 @@
     }
 
     .why-choose-wrapper{
-        margin: 100px auto;
+        margin: 150px auto 100px;
         width: 100%;
         position: relative;
+
+        @media (max-width: 1400px) {
+            margin: 100px auto;
+        }
 
         @media (max-width: 991px) {
             margin: 70px auto 10px auto;
@@ -903,6 +903,35 @@
 
             @media (max-width: 767px) {
                display: block;
+            }
+
+            &.version-2{
+                gap: 50px;
+
+                .content-small-wrapper-row__title{
+                    width: 60%;
+
+                    @media (max-width:767px) {
+                        width: 100%;
+                    }
+
+                    h3{
+                        max-width: 100%;
+                    }
+                }
+
+                .content-small-wrapper-row__content{
+                    width: 40%;
+
+                    @media (max-width:767px) {
+                        width: 100%;
+                    }
+
+                    p{
+                        margin-left: 0;
+                        max-width: 100%;
+                    }
+                }
             }
 
             &__title{
@@ -1436,5 +1465,63 @@
               }
         }
     }
+
+    .methodology-wrapper{
+        margin: 200px auto;
+        padding: 35px 0;
+
+        @media (max-width:1400px) {
+            margin: 100px auto;
+        }
+
+        @media (max-width:991px) {
+            margin: 70px auto;
+        }
+
+        .d-flex{
+            @media (max-width:767px) {
+                flex-direction: column;
+            }
+        }
+
+        &__content{
+            max-width: 30%;
+
+            h3{
+                margin-bottom: 40px;
+            }
+
+            p{
+                margin-bottom: 0;
+                font-size: 16px;
+                line-height: 30px;
+            }
+
+            @media (max-width:1200px) {
+                max-width: 35%;
+            }
+
+            @media (max-width:991px) {
+                max-width: 40%;
+            }
+
+            @media (max-width:767px) {
+                max-width: 100%;
+            }
+        }
+
+        &__img{
+            margin-left: 60px;
+
+            @media (max-width:991px) {
+                margin-left: 30px;
+            }
+
+            @media (max-width:767px) {
+                margin-left: 0;
+                margin-top: 25px;
+            }
+        }
+    }   
 }
 
