--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1995,7 +1995,12 @@ footer .footer-main .footer-links__2 .links {
 }
 
 .blogs-listing-wrapper {
-  margin: 100px auto 20px auto;
+  margin: 150px auto 20px auto;
+}
+@media (max-width: 1400px) {
+  .blogs-listing-wrapper {
+    margin: 100px auto 20px auto;
+  }
 }
 @media (max-width: 991px) {
   .blogs-listing-wrapper {
@@ -2753,6 +2758,15 @@ footer .footer-main .footer-links__2 .links {
   .aboutus-wrapper.w-full {
     margin-bottom: 70px;
   }
+}
+.aboutus-wrapper.version-2 .aboutus-wrapper__bgline {
+  position: absolute;
+  left: -55px;
+  top: 0;
+  width: 54%;
+  z-index: 1;
+  margin-top: -268px;
+  max-height: 200%;
 }
 .aboutus-wrapper__bgline {
   position: absolute;
@@ -3798,7 +3812,7 @@ footer .footer-main .footer-links__2 .links {
 }
 
 .faq-wrapper {
-  margin: 100px auto;
+  margin: 150px auto;
   padding: 0 120px 0 50px;
   max-width: 1440px;
   position: relative;
@@ -3806,6 +3820,11 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 1200px) {
   .faq-wrapper {
     padding: 0 30px;
+  }
+}
+@media (max-width: 1400px) {
+  .faq-wrapper {
+    margin: 100px auto;
   }
 }
 @media (max-width: 991px) {
@@ -4224,7 +4243,7 @@ footer .footer-main .footer-links__2 .links {
 .career-wrapper .job-list {
   margin: 200px auto;
 }
-@media (max-width: 1100px) {
+@media (max-width: 1400px) {
   .career-wrapper .job-list {
     margin: 130px auto;
   }
@@ -4748,7 +4767,7 @@ footer .footer-main .footer-links__2 .links {
   margin: 200px auto 100px;
   position: relative;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1400px) {
   .service-detail-wrapper .box-items.version-3, .services-content-wrapper .box-items.version-3 {
     margin: 100px auto;
   }
@@ -4756,11 +4775,6 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .service-detail-wrapper .box-items.version-3, .services-content-wrapper .box-items.version-3 {
     margin: 70px auto;
-  }
-}
-@media (max-width: 767px) {
-  .service-detail-wrapper .box-items.version-3, .services-content-wrapper .box-items.version-3 {
-    margin: 100px auto;
   }
 }
 .service-detail-wrapper .box-items.version-3 .why-looking__bgsvg, .services-content-wrapper .box-items.version-3 .why-looking__bgsvg {
@@ -4941,9 +4955,14 @@ footer .footer-main .footer-links__2 .links {
   margin-bottom: 15px;
 }
 .service-detail-wrapper .why-choose-wrapper, .services-content-wrapper .why-choose-wrapper {
-  margin: 100px auto;
+  margin: 150px auto 100px;
   width: 100%;
   position: relative;
+}
+@media (max-width: 1400px) {
+  .service-detail-wrapper .why-choose-wrapper, .services-content-wrapper .why-choose-wrapper {
+    margin: 100px auto;
+  }
 }
 @media (max-width: 991px) {
   .service-detail-wrapper .why-choose-wrapper, .services-content-wrapper .why-choose-wrapper {
@@ -5400,6 +5419,32 @@ footer .footer-main .footer-links__2 .links {
   .services-content-wrapper .content-small-wrapper-row {
     display: block;
   }
+}
+.services-content-wrapper .content-small-wrapper-row.version-2 {
+  gap: 50px;
+}
+.services-content-wrapper .content-small-wrapper-row.version-2 .content-small-wrapper-row__title {
+  width: 60%;
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper-row.version-2 .content-small-wrapper-row__title {
+    width: 100%;
+  }
+}
+.services-content-wrapper .content-small-wrapper-row.version-2 .content-small-wrapper-row__title h3 {
+  max-width: 100%;
+}
+.services-content-wrapper .content-small-wrapper-row.version-2 .content-small-wrapper-row__content {
+  width: 40%;
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .content-small-wrapper-row.version-2 .content-small-wrapper-row__content {
+    width: 100%;
+  }
+}
+.services-content-wrapper .content-small-wrapper-row.version-2 .content-small-wrapper-row__content p {
+  margin-left: 0;
+  max-width: 100%;
 }
 .services-content-wrapper .content-small-wrapper-row__title {
   width: 50%;
@@ -6188,6 +6233,65 @@ footer .footer-main .footer-links__2 .links {
 @media (max-width: 991px) {
   .services-content-wrapper .development-process-wrapper__steps.version-2 .step:not(:first-child) {
     margin-top: 50px;
+  }
+}
+.services-content-wrapper .methodology-wrapper {
+  margin: 200px auto;
+  padding: 35px 0;
+}
+@media (max-width: 1400px) {
+  .services-content-wrapper .methodology-wrapper {
+    margin: 100px auto;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .methodology-wrapper {
+    margin: 70px auto;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .methodology-wrapper .d-flex {
+    flex-direction: column;
+  }
+}
+.services-content-wrapper .methodology-wrapper__content {
+  max-width: 30%;
+}
+.services-content-wrapper .methodology-wrapper__content h3 {
+  margin-bottom: 40px;
+}
+.services-content-wrapper .methodology-wrapper__content p {
+  margin-bottom: 0;
+  font-size: 16px;
+  line-height: 30px;
+}
+@media (max-width: 1200px) {
+  .services-content-wrapper .methodology-wrapper__content {
+    max-width: 35%;
+  }
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .methodology-wrapper__content {
+    max-width: 40%;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .methodology-wrapper__content {
+    max-width: 100%;
+  }
+}
+.services-content-wrapper .methodology-wrapper__img {
+  margin-left: 60px;
+}
+@media (max-width: 991px) {
+  .services-content-wrapper .methodology-wrapper__img {
+    margin-left: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .services-content-wrapper .methodology-wrapper__img {
+    margin-left: 0;
+    margin-top: 25px;
   }
 }
 
